tests/invalid/Old_Invalid_4.whiley
method m(&int p)
requires *p == old(*p):
    //
    skip